include/turbo/turbo.h

/* ---- Handles ----------------------------------------------------------- */

typedef struct turbo_runtime   turbo_runtime;   /* the library, its devices */
typedef struct turbo_context   turbo_context;   /* one device, its memory   */
typedef struct turbo_buffer    turbo_buffer;    /* memory on host or device */
/* Caller-owned. On success code is 0 and message[0] is 0. */
typedef struct turbo_error {
    uint32_t struct_size;
    int32_t  code;
    uint32_t field;     /* 1-based field index for the two errors that name one, else 0 */
    char     message[TURBO_ERROR_MESSAGE_LEN];   /* NUL-terminated UTF-8 */
} turbo_error;
/* ---- Context and buffers ----------------------------------------------- */

int32_t turbo_context_create(turbo_runtime *rt, uint32_t device, turbo_context **out, turbo_error *err);
void    turbo_context_release(turbo_context *ctx);
int32_t turbo_context_device(turbo_context *ctx, uint32_t *out, turbo_error *err);
typedef struct turbo_native_handle {
    uint32_t struct_size;
    uint32_t kind;        /* TURBO_HANDLE_* */
    uint64_t handle;      /* pointer, cl_mem, fd or object as an integer */
    uint64_t aux;
    uint64_t offset;      /* bytes into the allocation */
} turbo_native_handle;
/* Packed row-major. */
typedef struct turbo_buffer_desc {
    uint32_t struct_size;
    uint32_t placement;   /* TURBO_PLACE_* */
    uint32_t dtype;       /* TURBO_DTYPE_* */
    uint32_t ndim;        /* 1 or 2 */
    uint64_t shape[2];
    uint64_t bytes;       /* 0 = from shape and dtype */
} turbo_buffer_desc;
int32_t turbo_buffer_alloc(turbo_context *ctx, const turbo_buffer_desc *desc, turbo_buffer **out, turbo_error *err);
/* Wrap memory the caller owns. No copy. The caller keeps it alive and
 * unchanged while the buffer is in use. */
int32_t turbo_buffer_import(turbo_context *ctx, const turbo_buffer_desc *desc,
                            const turbo_native_handle *handle, turbo_buffer **out, turbo_error *err);
void    turbo_buffer_release(turbo_buffer *buf);
int32_t turbo_buffer_get_desc(turbo_buffer *buf, turbo_buffer_desc *out, turbo_error *err);