bindings/java/src/main/java/ai/pipestream/turbo/ffi/TurboNative.java


    private static class turbo_context_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_context_create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t turbo_context_create(turbo_runtime *rt, uint32_t index, const turbo_context_desc *desc, turbo_context **out, turbo_error *err)
     * }
     */
    public static FunctionDescriptor turbo_context_create$descriptor() {
        return turbo_context_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_context_create(turbo_runtime *rt, uint32_t index, const turbo_context_desc *desc, turbo_context **out, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_context_create$handle() {
        return turbo_context_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_context_create(turbo_runtime *rt, uint32_t index, const turbo_context_desc *desc, turbo_context **out, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_context_create$address() {
        return turbo_context_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t turbo_context_create(turbo_runtime *rt, uint32_t index, const turbo_context_desc *desc, turbo_context **out, turbo_error *err)
     * }
     */
    public static int turbo_context_create(MemorySegment rt, int index, MemorySegment desc, MemorySegment out, MemorySegment err) {
        var mh$ = turbo_context_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_context_create", rt, index, desc, out, err);
            }
            return (int)mh$.invokeExact(rt, index, desc, out, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_context_release {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_context_release");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void turbo_context_release(turbo_context *ctx)
     * }
     */
    public static FunctionDescriptor turbo_context_release$descriptor() {
        return turbo_context_release.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void turbo_context_release(turbo_context *ctx)
     * }
     */
    public static MethodHandle turbo_context_release$handle() {
        return turbo_context_release.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void turbo_context_release(turbo_context *ctx)
     * }
     */
    public static MemorySegment turbo_context_release$address() {
        return turbo_context_release.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void turbo_context_release(turbo_context *ctx)
     * }
     */
    public static void turbo_context_release(MemorySegment ctx) {
        var mh$ = turbo_context_release.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_context_release", ctx);
            }
            mh$.invokeExact(ctx);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_context_device {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_context_device");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t turbo_context_device(turbo_context *ctx, uint32_t *out, turbo_error *err)
     * }
     */
    public static FunctionDescriptor turbo_context_device$descriptor() {
        return turbo_context_device.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_context_device(turbo_context *ctx, uint32_t *out, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_context_device$handle() {
        return turbo_context_device.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_context_device(turbo_context *ctx, uint32_t *out, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_context_device$address() {
        return turbo_context_device.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t turbo_context_device(turbo_context *ctx, uint32_t *out, turbo_error *err)
     * }
     */
    public static int turbo_context_device(MemorySegment ctx, MemorySegment out, MemorySegment err) {
        var mh$ = turbo_context_device.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_context_device", ctx, out, err);
            }
            return (int)mh$.invokeExact(ctx, out, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_buffer_alloc {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_buffer_alloc");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t turbo_buffer_alloc(turbo_context *ctx, const turbo_buffer_desc *desc, turbo_buffer **out, turbo_error *err)
     * }
     */
    public static FunctionDescriptor turbo_buffer_alloc$descriptor() {
        return turbo_buffer_alloc.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_buffer_alloc(turbo_context *ctx, const turbo_buffer_desc *desc, turbo_buffer **out, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_buffer_alloc$handle() {
        return turbo_buffer_alloc.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_buffer_alloc(turbo_context *ctx, const turbo_buffer_desc *desc, turbo_buffer **out, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_buffer_alloc$address() {
        return turbo_buffer_alloc.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t turbo_buffer_alloc(turbo_context *ctx, const turbo_buffer_desc *desc, turbo_buffer **out, turbo_error *err)
     * }
     */
    public static int turbo_buffer_alloc(MemorySegment ctx, MemorySegment desc, MemorySegment out, MemorySegment err) {
        var mh$ = turbo_buffer_alloc.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_buffer_alloc", ctx, desc, out, err);
            }
            return (int)mh$.invokeExact(ctx, desc, out, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_buffer_import {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_buffer_import");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t turbo_buffer_import(turbo_context *ctx, const turbo_buffer_desc *desc, turbo_buffer **out, turbo_error *err)
     * }
     */
    public static FunctionDescriptor turbo_buffer_import$descriptor() {
        return turbo_buffer_import.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_buffer_import(turbo_context *ctx, const turbo_buffer_desc *desc, turbo_buffer **out, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_buffer_import$handle() {
        return turbo_buffer_import.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_buffer_import(turbo_context *ctx, const turbo_buffer_desc *desc, turbo_buffer **out, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_buffer_import$address() {
        return turbo_buffer_import.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t turbo_buffer_import(turbo_context *ctx, const turbo_buffer_desc *desc, turbo_buffer **out, turbo_error *err)
     * }
     */
    public static int turbo_buffer_import(MemorySegment ctx, MemorySegment desc, MemorySegment out, MemorySegment err) {
        var mh$ = turbo_buffer_import.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_buffer_import", ctx, desc, out, err);
            }
            return (int)mh$.invokeExact(ctx, desc, out, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_buffer_release {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_buffer_release");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void turbo_buffer_release(turbo_buffer *buf)
     * }
     */
    public static FunctionDescriptor turbo_buffer_release$descriptor() {
        return turbo_buffer_release.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void turbo_buffer_release(turbo_buffer *buf)
     * }
     */
    public static MethodHandle turbo_buffer_release$handle() {
        return turbo_buffer_release.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void turbo_buffer_release(turbo_buffer *buf)
     * }
     */
    public static MemorySegment turbo_buffer_release$address() {
        return turbo_buffer_release.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void turbo_buffer_release(turbo_buffer *buf)
     * }
     */
    public static void turbo_buffer_release(MemorySegment buf) {
        var mh$ = turbo_buffer_release.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_buffer_release", buf);
            }
            mh$.invokeExact(buf);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_buffer_get_desc {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER
        );
